src/k8s/ingress-in-one.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: tripviewer-service
            port:
              number: 80
      - path: /api/user
        pathType: Exact
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/user
        pathType: Exact
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/user
        pathType: Exact
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/user
        pathType: Exact
        backend:
          service:
            name: user-java-service
            port:
              number: 80
